# rust-ci-testing

./: .gitignore  Cargo.toml  toolchain.toml
.github/: release-draft-config.yml
.github/actions/install-rust-tools/: action.yml
.github/workflows/: cargo-release.yml  ci-workflow.yml  doc-release.yml  test-workflow.yml  update-release-draft.yml
docs/: book.toml
docs/src/: chapter_1.md
rust-proc-macro/: Cargo.toml
rust-proc-macro/src/: lib.rs
